Introduce new field and update method to backend
