# backend/internal/api/model/types.go
@@ -13,11 +13,16 @@ type TaskCreate struct {
 	DueAt    *common.DateTimeShort
 }
 
+type TaskUpdate struct {
+	Completed *bool
+}
+
 type TaskResponse struct {
 	ID        common.Identifier     `json:"id"`
 	Title     string                `json:"title"`
 	Detail    *string               `json:"detail,omitempty"`
 	Priority  *string               `json:"priority,omitempty"`
+	Completed bool                  `json:"completed"`
 	DueAt     *common.DateTimeShort `json:"dueAt,omitempty"`
 	CreatedAt time.Time             `json:"createdAt"`
 }
