# backend/internal/api/task_api.go
@@ -2,12 +2,14 @@ package api
 
 import (
 	"encoding/json"
+	"errors"
 	"fmt"
 	"net/http"
 
 	"github.com/esceer/todo/backend/internal/api/model"
 	"github.com/esceer/todo/backend/internal/common"
 	"github.com/esceer/todo/backend/internal/service"
+	"github.com/esceer/todo/backend/internal/storage"
 )
 
 type taskApi struct {
@@ -38,11 +40,37 @@ func (a *taskApi) Create(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	if err = a.service.Save(&task); err != nil {
+	if err = a.service.Create(&task); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
+}
+
+func (a *taskApi) Patch(w http.ResponseWriter, r *http.Request) {
+	id, err := getIntPathParam(r, "id")
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	updates, err := getBody[model.TaskUpdate](r)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	updatedTask, err := a.service.Patch(common.Identifier(id), &updates)
+	if err != nil {
+		if errors.Is(err, storage.ErrNotFound) {
+			http.Error(w, err.Error(), http.StatusNotFound)
+		} else {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+	if err = json.NewEncoder(w).Encode(updatedTask); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
 }
 
 func (a *taskApi) Delete(w http.ResponseWriter, r *http.Request) {
@@ -52,7 +80,7 @@ func (a *taskApi) Delete(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	if err = a.service.Delete(common.Identifier(id)); err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 	w.WriteHeader(http.StatusNoContent)
