# backend/internal/storage/model/types.go
@@ -11,6 +11,7 @@ type Task struct {
 	Title     string
 	Detail    *string
 	Priority  *string
+	Completed bool
 	DueAt     *time.Time
 	CreatedAt *time.Time
 }
